# WLED-MM

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  E2E_SETUP_COMPLETE.md  openapi.yaml  package-lock.json  package.json  platformio.ini  platformio_override.ini  platformio_override.ini.sample  playwright.config.js  readme.md  requirements.txt
.github/: agent-build-instructions.md  agent-build.instructions.md  cicd.instructions.md  copilot-instructions.md  cpp.instructions.md  esp-idf.instructions.md  web.instructions.md
.github/workflows/: build.yml  daily.yaml  e2e-test.yml  nightly.yml  (+2 more)
docs/: E2E_ALTERNATIVES.md  E2E_TESTING.md  cpp.instructions.md  web.instructions.md
pio-scripts/: conditional_usb_mode.py  create_factory_bin.py  output_bins.py  set_nightly_version.py
tests/integration/: README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
tests/integration/wled_tests/: __init__.py  test_destructive.py  test_get_endpoints.py  test_legacy_api.py  test_segments_presets.py  test_state_write.py
tools/: cdata.js
wled00/: FX.cpp  FX.h  FX_2Dfcn.cpp  FX_fcn.cpp  FXparticleSystem.cpp  FXparticleSystem.h  NodeStruct.h  bus_manager.cpp  bus_manager.h  bus_wrapper.h  cfg.cpp  colorTools.hpp  colors.cpp  colors.h  const.h  dmx_input.cpp  dmx_output.cpp  e131.cpp  fcn_declare.h  file.cpp  hue.cpp  image_loader.cpp  improv.cpp  ir.cpp  json.cpp  led.cpp  network.cpp  ntp.cpp  ota_update.cpp  ota_update.h  pin_manager.cpp  pin_manager.h  playlist.cpp  presets.cpp  remote.cpp  set.cpp  udp.cpp  usermods_list.cpp  util.cpp  util.h  (+10 more)
(+97 files in other folders)
